--- a/src/css/components/page-control.css
+++ b/src/css/components/page-control.css
@@ -37,8 +37,8 @@
   }
   &:disabled, &[aria-disabled="true"] {
     pointer-events: none;
-    opacity: 0.15;
-    .dark & { opacity: 0.18; }
+    opacity: 0.22;
+    .dark & { opacity: 0.25; }
   }
   @media (forced-colors: active) {
     border: 2px solid ButtonText;
